# TheSettlements-archived

./: .dockerignore  .env  .gitignore  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
api/: crud.py  exceptions.py
api/api_v1/: auth.py
api/api_v1/endpoints/: settlement.py  user.py
backend/: .gitignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: crud.py  dependencies.py  deps.py  exceptions.py
backend/app/api/api_v1/: api.py  auth.py
backend/app/api/api_v1/endpoints/: auth.py  settlement.py  user.py
backend/app/core/: .env.example  auth.py  config.py
backend/app/db/: session.py
backend/app/schemas/: __init__.py  settlement.py  structure.py  user.py
backend/app/src/: board.py  tournaments.py
backend/app/utils/: .env  db.py  filename.py  schema.py
compose/: run_db.sh  start.sh
frontend/: Dockerfile  Dockerfile.prod  package-lock.json  package.json  svelte.config.js
frontend/src/routes/: index.svelte
settlements-api/: .env-template  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
settlements-api/ci/: run_db.sh  start.sh
settlements-api/dbschema/: default.esdl
settlements-api/dbschema/migrations/: 00001.edgeql
settlements-api/settlements/: __init__.py  api.py  auth.py  config.py  database.py  main.py  models.py  services.py
settlements-api/settlements/auth/: services.py  views.py
settlements-api/settlements/cities/: models.py  schemas.py  services.py  views.py
settlements-api/settlements/games/: models.py  schemas.py  services.py  views.py
settlements-api/settlements/migrations/: env.py
settlements-api/settlements/migrations/versions/: 0b1d89787bbc_init.py  66e3e069033d_init.py
settlements-api/settlements/users/: models.py  schemas.py  services.py  views.py
settlements-api/settlements/utils/: filename.py  security.py
thesettlements-api/: .env-template  Dockerfile  pyproject.toml
thesettlements-api/app/: auth.py  config.py  database.py  main.py
thesettlements-api/app/api/: dependencies.py
thesettlements-api/app/api/api_v1/: auth.py
thesettlements-api/app/api/api_v1/endpoints/: settlement.py
thesettlements-api/app/core/: .env.example  config.py
thesettlements-api/app/settlements/: schemas.py
thesettlements-api/app/structures/: schemas.py
thesettlements-api/app/users/: schemas.py
