[tool.poetry]
name = "app"
version = "0.1.0"
description = "The Settlements multiplayer strategy game"
authors = ["Sebastian Kalisz <sk.kaliszs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "~0.20.0"
fastapi = "~0.88.0"
pydantic = {extras = ["email"], version = "~1.10.2"}
motor = "~3.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
