[tool.poetry]
name = "Settlements"
version = "1.0"
description = "The Settlements multiplayer strategy game"
authors = ["Sebastian Kalisz <sk.kaliszs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
fastapi-cli = "^0.0.7"
pydantic = "^2.10"
pydantic-settings = "^2.7"
sqlalchemy = "^2.0"
psycopg = "^3.2"
alembic = "^1.14"
passlib = {extras = ["bcrypt"], version = "^1.7"}
pyjwt = "^2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pre-commit = "^4.0"
factory-boy = "^3.3"

[tool.ruff]
line-length = 120
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
