[tool.poetry]
name = "thesettlements-api"
version = "0.1.0"
description = "The Settlements multiplayer strategy game"
authors = ["Sebastian Kalisz <sk.kaliszs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23"
fastapi = "^0.103"
pydantic = "^2"
pydantic-settings = "^2"
neo4j = "^5"
neomodel = "^5"
neo4j-python-migrations = "^0.1"
passlib = {extras = ["bcrypt"], version = "^1"}
python-jose = {extras = ["cryptography"], version = "^3"}

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3"
fixtup = "^0.1"
factory-boy = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
